<resources>
    <string name="app_name">PLANt</string>
    <string name="spok_title">Splošni podatki o kmetiji</string>
    <string name="spok_ime_hint">Ime lastnika</string>
    <string name="spok_priimek_hint">Priimek lastnika</string>
    <string name="spok_naslov_hint">Naslov kmetije</string>
    <string name="spok_katastrska_hint">Katastrska številka zemljišča</string>
    <string name="spok_panoga_hint">Kmetijska panoga</string>
    <string name="spok_drugo_hint"> Drugo</string>
    <string name="spok_shrani">Shrani</string>

    <string name="urnik_title">Urnik</string>

    <string name="razpisi_title">Razpisi</string>
    <string name="plant_naslovapp">PLANt</string>
    <string name="razpis_x">RAZPIS X:</string>
    <string name="razpis_x_opis"><![CDATA[opis razpisa x]]></string>

    <!-- urnik -->
    <!-- string name="app_name">CalendarAppExample</string-->
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="razpis_x_naslov">X NASLOV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>