<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Razpis1"
    android:background="@drawable/ozadje_bright1"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_close_24"
        android:background="@drawable/background_gumbi"
        android:layout_gravity="top|right"
        android:layout_margin="20dp"
        android:onClick="finishRazpis"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/razpisXtv"
        android:text="@string/razpis_x"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:padding="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/razpisXnaslov"
        android:text="@string/razpis_x_naslov"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:padding="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/razpisXopis"
        android:text="@string/razpis_x_opis"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:padding="40dp"/>

</LinearLayout>